--- a/files/RichEmail.html
+++ b/files/RichEmail.html
@@ -486,7 +486,7 @@
         "borders":{"top":"20mm","right":"20mm","bottom":"15mm","left":"20mm","footer":"5mm"},
         "footer":"<table style=\"width:100%; border-top:1px solid lightgray;font:normal 8pt Sans-serif;color:grey\"><TR><td>A new file to display</td><TD align=\"right\">Page {{page}} of {{pages}}</td></TR></table>",
         "bkgr":false,"body":"1",
-        "content":"<HTML><HEAD><STYLE>"+ getCurrStyle() +"</STYLE></HEAD><BODY class='"+ w +"' style='background-color:none;border:none'>"+ T.innerHTML +"</HTML>"};
+        "content":"<HTML><HEAD><STYLE>"+ getCurrStyle() +"</STYLE></HEAD><BODY class='"+ w +"' style='background-color:;border:none;padding:0px'>"+ T.innerHTML +"</HTML>"};
     id('Frm').action = 'pipe/' + j.fileName;
     id('Hdn').value = JSON.stringify(j);
     alert(id('Frm').action + '\n' + id('Hdn').value);
