--- a/files/RichEmail.html
+++ b/files/RichEmail.html
@@ -479,19 +479,21 @@
   }
   
   function downPDF() {
+    let j = jPDF, F = prompt('Enter Cols|Rows|Style:', j.fileName); if(!F) return;
     if(T.innerHTML.indexOf('&nbsp;') >-1) T.innerHTML = T.innerHTML.replace(/&nbsp;+/g,' ');
-    const el = document.querySelector('select');
-    const w = el.options[el.selectedIndex].value;
-    let j = {"fileName":"A new file to display.pdf",
-        "borders":{"top":"20mm","right":"20mm","bottom":"15mm","left":"20mm","footer":"5mm"},
-        "footer":"<table style=\"width:100%; border-top:1px solid lightgray;font:normal 8pt Sans-serif;color:grey\"><TR><td>A new file to display</td><TD align=\"right\">Page {{page}} of {{pages}}</td></TR></table>",
-        "bkgr":false,"body":"1",
-        "content":"<HTML><HEAD><STYLE>"+ getCurrStyle() +"</STYLE></HEAD><BODY class='"+ w +"' style='background-color:transparent;border:none;padding:0px'>"+ T.innerHTML +"</HTML>"};
+    const el = document.querySelector('select'), w = el.options[el.selectedIndex].value;
+    j.fileName = F.trim(); jPDF.fileName = j.fileName; j.footer = j.footer.replace('{{title}}',j.fileName);
+    j.content = "<HTML><HEAD><STYLE>"+ getCurrStyle() +"</STYLE></HEAD><BODY class='"+ w +"' style='border:none;"+(j.bkgr?'':'background-color:transparent;padding:0px')+"'>"+ T.innerHTML +"</HTML>"  ;
     id('Frm').action = 'pipe/' + j.fileName;
     id('Hdn').value = JSON.stringify(j);
-    alert(id('Frm').action + '\n' + id('Hdn').value);
-    //alert(id('inCapsul').innerHTML);
     return true;
+  }
+  var jPDF = {
+    fileName:"Untitled.pdf",
+    borders:{top:"20mm",right:"20mm",bottom:"15mm",left:"20mm",footer:"5mm"},
+    footer:"<table style=\"width:100%; border-top:1px solid lightgray;font:normal 8pt Sans-serif;color:grey\"><TR><td>{{title}}</td><TD align=\"right\">Page {{page}} of {{pages}}</td></TR></table>",
+    bkgr:false, body:"1",
+    content:null
   }
 
 </script>
