--- a/files/RichEmail.html
+++ b/files/RichEmail.html
@@ -481,10 +481,12 @@
   }
   
   function downPDF() {
-    let j = jPDF, F = prompt('Enter the title:', j.fileName); if(!F) return false;
+    let j = {}, F = prompt('Enter the title:', jPDF.fileName); if(!F) return false;
     if(T.innerHTML.indexOf('&nbsp;') >-1) T.innerHTML = T.innerHTML.replace(/&nbsp;+/g,' ');
     const el = document.querySelector('select'), w = el.options[el.selectedIndex].value;
-    j.fileName = F.trim(); jPDF.fileName = j.fileName; j.footer = j.footer.replace('{{title}}',j.fileName);
+    jPDF.fileName = F.trim();
+    j = JSON.parse(JSON.stringify(jPDF));
+    j.footer = j.footer.replace('{{title}}',j.fileName);
     j.content = "<HTML><HEAD><STYLE>"+ getCurrStyle() +"</STYLE></HEAD><BODY class='"+ w +"' style='border:none;"+(j.bkgr?'':'background-color:transparent;padding:0px')+"'>"+ T.innerHTML +"</HTML>"  ;
     id('Frm').action = 'pipe/' + j.fileName + '.pdf';
     id('Hdn').value = JSON.stringify(j);
