--- a/files/RichEmail.html
+++ b/files/RichEmail.html
@@ -55,10 +55,10 @@
     }
 /*.TB { font:normal 1em Sans-serif; }*/
     .txtStyle td[qL] { vertical-align: top; padding-right:12px; color:red; text-align:right; width: 60px; }
-    .txtStyle td[q1] { vertical-align: top; padding-right:12px; font-size:42pt; color:#ccc; text-align:right; width: 60px; border-right:1px solid #ccc; }
+    .txtStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; color:#ccc; text-align:right; width: 60px; border-right:1px solid #ccc; }
     .txtStyle td[q2] { vertical-align: top; padding-left:12px; }
 
-    .txtStyle div[enum] { display: inline-block; width:20px; font:bold 14px Sans-serif; color:#fff;
+    .txtStyle div[enum] { display: inline-block; width:20px; font:bold 1.2em Sans-serif; color:#fff;
       background-color:#666; padding:6px; border-radius:8px; text-align:center; }
 
 /*------------------------ Blue Style -------------------------*/
@@ -83,10 +83,10 @@
     }
 
     .blueStyle td[qL] { vertical-align: top; padding-right:12px; color:blue; text-align:right; width: 60px; }
-    .blueStyle td[q1] { vertical-align: top; padding-right:12px; font-size:42pt; color:#ccd; text-align:right; width: 60px; border-right:1px solid #ccd; }
+    .blueStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; color:#ccd; text-align:right; width: 60px; border-right:1px solid #ccd; }
     .blueStyle td[q2] { vertical-align: top; padding-left:12px; }
 
-    .blueStyle div[enum] { display: inline-block; width:20px; font:bold 14px Sans-serif; color:#fff;
+    .blueStyle div[enum] { display: inline-block; width:20px; font:bold 1.2em Sans-serif; color:#fff;
       background-color:#669; padding:6px; border-radius:8px; text-align:center; }
 
 /*------------------------ Yellow Style -------------------------*/
@@ -111,10 +111,10 @@
     }
 
     .yelStyle td[qL] { vertical-align: top; padding-right:12px; color:red; text-align:right; width: 60px; }
-    .yelStyle td[q1] { vertical-align: top; padding-right:12px; font-size:42pt; color:#ffdf80; text-align:right; width: 60px; border-right:1px solid #ffdf80; }
+    .yelStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; color:#ffdf80; text-align:right; width: 60px; border-right:1px solid #ffdf80; }
     .yelStyle td[q2] { vertical-align: top; padding-left:12px; }
 
-    .yelStyle div[enum] { display: inline-block; width:20px; font:bold 14px Sans-serif; color:#622;
+    .yelStyle div[enum] { display: inline-block; width:20px; font:bold 1.2em Sans-serif; color:#622;
       background-color:#ee4; padding:6px; border-radius:8px; text-align:center; }
 /*------------------------ Normal Style -------------------------*/
     .nrmStyle {
@@ -132,10 +132,10 @@
     }
 
     .nrmStyle td[qL] { vertical-align: top; padding-right:12px; color:#99b; text-align:right; width: 60px; }
-    .nrmStyle td[q1] { vertical-align: top; padding-right:12px; font-size:42pt; color:#ccc; text-align:right; width: 60px; border-right:1px solid #ccc; }
+    .nrmStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; color:#ccc; text-align:right; width: 60px; border-right:1px solid #ccc; }
     .nrmStyle td[q2] { vertical-align: top; padding-left:12px; }
 
-    .nrmStyle div[enum] { display: inline-block; width:20px; font:bold 14px Sans-serif; color:#fff;
+    .nrmStyle div[enum] { display: inline-block; width:20px; font:bold 1.2em Sans-serif; color:#fff;
       background-color:#666; padding:6px; border-radius:8px; text-align:center; }
 /*------------------------ Black Style -------------------------*/
     .blckStyle {
@@ -159,10 +159,10 @@
     }
 
     .blckStyle td[qL] { vertical-align: top; padding-right:12px; color:#000; text-align:right; width: 60px; }
-    .blckStyle td[q1] { vertical-align: top; padding-right:12px; font-size:42pt; color:#000; text-align:right; width: 60px; border-right:1px solid #000; }
+    .blckStyle td[q1] { vertical-align: top; padding-right:12px; font-size:4em; color:#000; text-align:right; width: 60px; border-right:1px solid #000; }
     .blckStyle td[q2] { vertical-align: top; padding-left:12px; }
 
-    .blckStyle div[enum] { display: inline-block; width:20px; font:bold 14px Sans-serif; color:#aae;
+    .blckStyle div[enum] { display: inline-block; width:20px; font:bold 1.2em Sans-serif; color:#aae;
       background-color:#000; padding:6px; border-radius:8px; text-align:center; }
 
   </style>
